--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Мафия Вовы</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Telegram Web App SDK -->
+  <!-- Telegram Web App SDK (обязательно) -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <!-- Adsonar SDK (реклама) -->
+  <script src="https://sdk.adsonar.co/v1/sdk.js?appId=ТВОЙ_APP_ID"></script>
 </head>
 <body>
   <div id="root"></div>
