--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Telegram Web App SDK (обязательно) -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <!-- Adsonar SDK (реклама) -->
-  <script src="https://sdk.adsonar.co/v1/sdk.js?appId=ТВОЙ_APP_ID"></script>
+  <script src="https://sdk.adsonar.co/v1/sdk.js?appId=app_434e6e5e"></script>
 </head>
 <body>
   <div id="root"></div>
