--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link rel="stylesheet" href="style.css" />
   <!-- Telegram Web App SDK (обязательно) -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <!-- Adsonar SDK (реклама) -->
+  <!-- Adsonar SDK (реклама) – замени appId на свой когда получишь -->
   <script src="https://sdk.adsonar.co/v1/sdk.js?appId=app_434e6e5e"></script>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
